Various spacing fixes.
Add properties in features.
Fix spacing in About page.
Fix spacing in Features main page.
Fix spacing in Landing page.

--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -68,3 +68,26 @@
 	background-color: #f2f2f2;
 	color: #141414
 }
+
+#head-gall {
+	background-color: #141414;
+	color: #f2f2f2;
+	text-transform: uppercase;
+	letter-spacing: 0.5em;
+}
+
+.gallery-items > img {
+	max-height: 200px;
+}
+
+/*
+.fixed-left {
+	top: 0;
+	left: 0;
+	bottom: 0;
+}
+
+.modal-content {
+	height: 100%;
+}
+*/
